odontotheme/static/css/odonto.css
.cambridge_blue {
  color: #A3C9A8;
}

.bg-bone {
  background-color: #DDD8C4;
}

body {
  background-color: white;
  font-size: 18px;
  color: #21232A;
  overflow-y: hidden;
}

h1 {
  color: #3b68a0;
}

h2 {
  color: #3C4939;
}

h3 {
  font-size: 20px;
}

table {
  font-size: 16px;
}

a {
  color: #595F72;
}

a:hover {
  color: #474c5b;
}

.form-control {
  color: #595F72;
  border-radius: 0px;
}

.form-horizontal .control-label,
label {
  text-align: left;
  font-size: 18px;
  color: #595F72;
  font-weight: normal;
}

.help-block {
  color: #DE3C4B;
}

.btn {
  border-radius: 0px;
}

.btn.btn-radio-group {
  font-size: 18px;
  line-height: 24px;
  padding: 12px 18px;
}

.btn.btn-checkbox {
  min-width: 40px;
  min-height: 40px;
  max-width: 40px;
  max-height: 40px;
  text-align: center;
  padding: 8px 0px 0px 0px;
}

.btn-default {
  color: #595F72;
}

.btn-default.active {
  background-color: #A3C9A8;
  border-color: #89ba90;
  color: #595F72;
}

.btn-error .btn-default, .btn-error .active.btn-default {
  background-color: #DE3C4B;
  border-color: #dd3343;
}

.btn-primary.disabled {
  background-color: #595F72;
  border-color: #555a6c;
  color: #DDD8C4;
}

.panel.panel-primary .panel-heading .btn-primary,
.btn-primary,
.btn-primary:focus {
  background-color: #A3C9A8;
  border-color: #89ba90;
  color: #595F72;
}

.panel.panel-primary .panel-heading .btn-primary:hover,
.btn-primary:hover {
  color: #595F72;
  font-weight: normal;
  background-color: #89ba90;
}

.btn-secondary, .btn-secondary:hover, .btn-secondary:focus {
  background-color: #A3C9A8;
  border-color: #89ba90;
  color: #595F72;
  font-weight: normal;
  font-size: 18px;
  line-height: 24px;
}

#episode-history h4 {
  color: white;
  text-decoration: underline;
  font-size: 16px;
}

#episode-history a {
  font-size: 16px;
  color: white;
  display: block;
}

#episode-history a:hover,
#episode-history a:visited {
  color: white;
  font-size: 16px;
}

#episode-history a.bg-active {
  background-color: #3b68a0;
}

h1 {
  margin-top: 24px;
  margin-bottom: 36px;
}

h2 {
  margin-top: 24px;
  margin-bottom: 24px;
}

.offset-below {
  margin-bottom: 48px;
}

.form-horizontal .control-label,
label {
  padding-bottom: 8px;
}

.pathway-save-button .btn {
  margin-top: 32px;
  margin-left: -15px;
  margin-bottom: 64px;
}

.odonto-checkbox label.col-md-9 {
  padding-left: 0px;
}

#episode-history {
  position: fixed;
  left: 20px;
  top: 300px;
  margin-left: 25px;
}

@media (max-width: 991px) {
  #episode-history {
    display: none;
  }
}

#episode-history a {
  padding: 5px;
}

#logout {
  position: fixed;
  bottom: 0px;
}

.patient-detail-heading {
  margin-top: 110px;
}

.open-claim-button {
  margin-right: 12px;
}

.form-control {
  font-size: 18px;
  height: 48px;
}

.btn-lg {
  padding: 6px 40px;
  font-size: 18px;
  font-weight: bold;
  border-radius: 2px;
}

.btn-default small {
  color: #DDD;
}

.navbar .container-fluid .navbar-brand {
  margin-left: -32px;
}

.navbar-default a.navbar-brand {
  color: white;
}

.navbar-default a.navbar-brand:hover {
  color: #eee;
}

.main-view {
  overflow-x: auto;
}

.navbar-default, .top-navbar {
  border-bottom: none;
}

.top-navbar {
  height: 90px;
  background-color: #487DBC;
}

.nav-bar-search .form-control {
  font-size: 16px;
  line-height: 16px;
  height: 32px;
}

.nav-bar-search:before {
  font-size: 16px;
}

.navbar-default .navbar-nav > li > a {
  color: white;
}

.navbar-brand img {
  height: 80px;
  margin-top: -15px;
}

#main-navbar {
  margin-top: 20px;
}

.ngProgressLiteBar {
  display: none;
}

.content-offset {
  margin-top: 100px;
}

.pathway-offset {
  margin-top: 80px;
}

.nav-bar-links {
  margin-top: -5px;
}

.nav-bar-odonto-container {
  position: fixed;
  margin-top: -106px;
  z-index: 1040;
  left: 50%;
}

.nav-bar-odonto-title {
  margin-left: -50%;
  font-size: 24px;
  font-weight: 300;
  color: white;
}

.odonto-small-title {
  font-size: 18px;
  font-weight: 400;
  margin-top: 30px;
  margin-bottom: 30px;
}

.loading {
  background-color: white;
  height: 100%;
  position: fixed;
  width: 1100%;
  z-index: 100;
  padding-left: 0px;
  margin-left: -20px;
}

.pathway-process-steps-padding {
  margin-top: 60px;
}

.btn-choices button {
  width: 240px;
  height: 200px;
  border-radius: 4px;
  margin-bottom: 30px;
  background-color: #d4d4d4;
  color: white;
}

.btn-choices button.active {
  background-color: #487cbc;
}

.odonto-list {
  margin-top: 90px;
  padding: 20px;
}

.patient-detail-heading h1,
.patient-detail-heading h1 small {
  color: #487cbc;
}

.panel.panel-primary .panel-heading {
  color: black;
}

.odonto-detail {
  margin-top: 100px;
  /*     background-color: firebrick */
}

.odonto-detail h2 {
  padding-bottom: 20px;
}

.odonto-detail .panel-default {
  border: none;
}

.panel-primary .panel-default .panel-heading,
.panel-default .panel-heading {
  border-bottom: 3px solid #487cbc;
}

.search-panel.panel.panel-primary .panel-heading {
  background-color: transparent;
  border-bottom: 3px solid #487cbc;
}

.modal-header {
  background-color: #487cbc;
}

.panel.panel-primary .panel-heading {
  background-color: transparent;
  border-bottom: 3px solid #487cbc;
}

.navbar-brand {
  padding-left: 50px;
}

#side-nav {
  background-color: #487DBC;
  height: 100vh;
}

@media (max-width: 991px) {
  #side-nav {
    display: none;
  }
}

#side-nav ul.app-info {
  padding-top: 120px;
  padding-bottom: 30px;
}

.app-info li {
  padding-left: 32px;
  color: white;
}

#side-nav {
  background-color: #487CBC;
  position: fixed;
}

#side-nav .navbar-nav {
  width: 100%;
}

#side-nav ul.nav li {
  float: none;
}

#side-nav ul.nav li i {
  padding-right: 4px;
}

#side-nav ul.nav li a {
  padding-left: 26px;
}

#side-nav ul.nav li .badge {
  float: right;
  background-color: white;
  color: #124c91;
}

#side-nav ul.nav li:hover a, #side-nav ul.nav li a:hover, #side-nav ul.nav li:hover {
  background-color: #2c64a8;
  color: white;
  cursor: pointer;
}

#side-nav ul.nav li.active, #side-nav ul.nav li.active a {
  background-color: #124c91;
}

#side-nav hr {
  margin-left: 5%;
}

#side-nav a {
  color: white;
}

.outer-container {
  overflow-y: scroll;
  height: 100vh;
}

.no-touchevents .panel-heading i.edit, .list-group-item i.edit, .list-group-item i.delete {
  display: block;
  color: #ccc;
}

.touchevents .panel-heading i.edit,
.touchevents .panel-heading i.delete,
.panel-heading:hover i.edit,
.list-group-item:hover i.edit,
.list-group-item:hover i.delete {
  color: black;
  cursor: pointer;
}

.btn.btn-default small {
  color: #CCC;
}

.btn.btn-default small {
  color: #CCC;
}

.panel-margin {
  padding-left: 15px;
}

table.patient-list {
  font-size: 16px;
}

.panel {
  border: none;
  background: none;
  -webkit-box-shadow: none;
          box-shadow: none;
  border-radius: 0px;
}

.panel-footer {
  background: none;
}

.panel.panel-primary .panel-heading.pathway-header {
  background: none;
  border-color: #487cbc;
}

.dental-chart .right {
  float: right;
}

.chart-tooth {
  float: left;
}

.chart-tooth label.notation {
  display: block;
  border: 1px solid #ccc;
  padding: 0px;
  margin-top: 1px;
  text-align: center;
}

.btn.btn-tooth {
  min-width: 40px;
  min-height: 40px;
  max-width: 40px;
  max-height: 40px;
  text-align: center;
  padding: 8px 0px 0px 0px;
}

.extraction-chart {
  padding-left: 20px;
}

.extraction-chart .upper {
  border-bottom: 2px solid #ddd;
}

.extraction-chart .patient-right {
  border-right: 2px solid #ddd;
  text-align: right;
}

@media (max-width: 768px) {
  .radio-buttons .btn-group {
    width: 100%;
  }
  .radio-buttons .btn-radio-group {
    display: block;
  }
}

.errored-state select {
  background-color: #fcc;
}
/*# sourceMappingURL=odonto.css.map */

